--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,2 +1,3 @@
 v0.1.0, 07-20-2014 -- Initial release.
 v0.1.1, 07-20-2014 -- Minor changes to resolve sys path issues.
+v0.1.2, 07-21-2014 -- Improved the method for checking for numeric include/exclude, added equivalent of Stata 'describe' command. Also made the hhkit a subclass of Pandas DataFrame, allowing it to store and change a DataFrame object.
